--- a/iPark/Views/ItemView.xib
+++ b/iPark/Views/ItemView.xib
@@ -1,7 +1,8 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15509"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,10 +10,36 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="M85-hm-6hd" customClass="Card" customModule="Material">
+                    <rect key="frame" x="8" y="52" width="398" height="194"/>
+                    <subviews>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="vR9-Fs-y5f">
+                            <rect key="frame" x="15" y="15" width="114" height="89"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="89" id="9zz-Cp-EDQ"/>
+                                <constraint firstAttribute="width" constant="114" id="SPt-8Q-dpf"/>
+                            </constraints>
+                        </imageView>
+                    </subviews>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                    <constraints>
+                        <constraint firstItem="vR9-Fs-y5f" firstAttribute="top" secondItem="M85-hm-6hd" secondAttribute="top" constant="15" id="Vcl-hl-atD"/>
+                        <constraint firstAttribute="height" constant="194" id="gko-ts-Su8"/>
+                        <constraint firstItem="vR9-Fs-y5f" firstAttribute="leading" secondItem="M85-hm-6hd" secondAttribute="leading" constant="15" id="whU-PD-4p0"/>
+                    </constraints>
+                </view>
+            </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstItem="M85-hm-6hd" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="8" id="dHT-vd-rLc"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="M85-hm-6hd" secondAttribute="trailing" constant="8" id="ezG-90-DP5"/>
+                <constraint firstItem="M85-hm-6hd" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="8" id="rm9-78-pZy"/>
+            </constraints>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
+            <point key="canvasLocation" x="140.57971014492756" y="153.34821428571428"/>
         </view>
     </objects>
 </document>
