--- a/iPark/Base.lproj/Main.storyboard
+++ b/iPark/Base.lproj/Main.storyboard
@@ -171,12 +171,34 @@
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="F4C-X5-9Hf">
+                                <rect key="frame" x="0.0" y="94" width="414" height="719"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="dUW-R3-ZFj">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="dUW-R3-ZFj" id="YLY-1q-ScY">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="yTT-ni-Rql" id="UH2-Ow-abp"/>
+                                    <outlet property="delegate" destination="yTT-ni-Rql" id="se4-sT-8pT"/>
+                                </connections>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
                             <constraint firstItem="YoW-2Q-HAD" firstAttribute="top" secondItem="Tow-Ce-eTd" secondAttribute="top" id="9bd-16-qdV"/>
                             <constraint firstItem="YoW-2Q-HAD" firstAttribute="leading" secondItem="Tow-Ce-eTd" secondAttribute="leading" id="K0m-Vo-bbM"/>
                             <constraint firstItem="Tow-Ce-eTd" firstAttribute="trailing" secondItem="YoW-2Q-HAD" secondAttribute="trailing" id="Or2-ut-Uqn"/>
+                            <constraint firstItem="F4C-X5-9Hf" firstAttribute="leading" secondItem="Tow-Ce-eTd" secondAttribute="leading" id="Sb6-KT-BxQ"/>
+                            <constraint firstItem="F4C-X5-9Hf" firstAttribute="top" secondItem="YoW-2Q-HAD" secondAttribute="bottom" id="bHd-bM-AIr"/>
+                            <constraint firstItem="Tow-Ce-eTd" firstAttribute="trailing" secondItem="F4C-X5-9Hf" secondAttribute="trailing" id="mCW-0G-6Ov"/>
+                            <constraint firstItem="Tow-Ce-eTd" firstAttribute="bottom" secondItem="F4C-X5-9Hf" secondAttribute="bottom" id="rUX-QB-14f"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Tow-Ce-eTd"/>
                     </view>
@@ -185,6 +207,7 @@
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="tabBar" destination="YoW-2Q-HAD" id="pzL-Dw-8gc"/>
+                        <outlet property="tableView" destination="F4C-X5-9Hf" id="Ce2-Ku-9jl"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BL0-7q-RNX" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -302,11 +325,11 @@
                                                                 <rect key="frame" x="-2" y="15" width="18" height="18"/>
                                                                 <subviews>
                                                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="clock" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="0At-Qb-vCy">
-                                                                        <rect key="frame" x="1" y="1.5" width="16" height="15"/>
+                                                                        <rect key="frame" x="2" y="2.5" width="14" height="13"/>
                                                                         <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                         <constraints>
-                                                                            <constraint firstAttribute="width" constant="16" id="bIF-Tx-x0B"/>
-                                                                            <constraint firstAttribute="height" constant="16" id="qi2-iF-oAR"/>
+                                                                            <constraint firstAttribute="width" constant="14" id="bIF-Tx-x0B"/>
+                                                                            <constraint firstAttribute="height" constant="14" id="qi2-iF-oAR"/>
                                                                         </constraints>
                                                                     </imageView>
                                                                 </subviews>
